--- a/src/components/SignUp/signup.css
+++ b/src/components/SignUp/signup.css
@@ -1,16 +1,17 @@
 .signup-container {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 80vh;
-  background-color: #f9f9f9;
+  height: 100vh;
   padding: 20px;
+  box-sizing: border-box;
+  padding-top: 15%;
 }
 
 .signup-cont {
-  width: 100%;
-  max-width: 400px;
-  background-color: #fff;
+  width: 40%;
+  height: 100%;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -19,6 +20,7 @@
 
 .signup-form {
   width: 100%;
+  padding-bottom: 20px;
 }
 
 .heading {
@@ -49,39 +51,61 @@ input.form-control {
 }
 
 
-@media (min-width: 768px) {
-  .signup-cont {
-      max-width: 500px;
-      padding: 30px;
-  }
+@media (min-width: 375px) {
 
+  .signup-cont{
+    width: 100%;
+    
+  }
+  
 }
 
-@media (min-width: 1024px) {
-  .signup-container {
-      padding: 40px;
+@media (min-width: 768px) {
+
+  .signup-container{
+    padding-top: 10%;
   }
 
-  .signup-cont {
-      max-width: 600px;
+  .signup-cont{
+    width: 60%;
+  }
+
+  .signup-form {
+      width: 100%;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
   }
+}
+@media (min-width: 1024px) {
+
+  .signup-container{
+    padding-top: 5%;
+    width: 100%;
+  }
+
+  .signup-cont {
+      width: 50%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
 
   .signup-form {
       padding: 20px;
+      width: 80%;
   }
 
 }
 
 @media (min-width: 1440px) {
-  .signup-cont {
-      max-width: 520px;
+
+  .signup-cont{
+    width: 50%;
   }
-  .signup-form {
-    padding: 40px;
- }
 
   .heading {
       font-size: 30px;
