--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,139 +1,92 @@
-.home-cont {
+.home-main-cont{
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
-}
-
-.myhome {
-  width: 100%;
-  height: 100vh;
-  background-image: url("../../assets/myhomeimg.jpg");
+  background-image: url(../../assets/myhomeimg.jpg);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   display: flex;
-  box-sizing: border-box;
-  background-position: center;
 }
-.left{
+.left-blank{
   width: 55%;
+  display: block;
 }
-
-.right {
-  border-radius: 10px;
+.right-cont{
   width: 45%;
   height: 100%;
-  align-self: center;
+  padding: 1%;
   display: flex;
   flex-direction: column;
 }
-.logbtn{
-height: 10%;
-display: flex;
-justify-content: right;
+.top-cont{
+  width: 100%;
+  height: 8%;
+  display: flex;
+  justify-content: flex-end;
 }
-.info{
-   width: 90%;
-   height: 90%;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: left;
-   padding: 5%;
+.top-cont button{
+  height: auto;
+  width: auto;
 }
-.head {
+.lower-cont{
+  padding: 2%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.lower-cont h2{
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
 }
-
-.todo {
-  color: red;
-  font-size: 40px;
-  font-weight: 700;
+.lower-cont span{
+color: red;
+font-size: 30px;
+font-weight: 700;
 }
-
-h4 {
+.lower-cont p{
+  font-weight: bold;
+}
+.lower-cont h4{
   font-family: Lucida Sans;
 }
-
-.para{
-  margin-top: 15px;
-}
-.mybtn {
-  width: 50%;
-  max-width: 600px;
+.lower-cont button{
   background-color: rgba(248, 83, 24, 0.825);
-  padding: 10px;
-  font-size: 18px;
-  color: white;
+  border: none;
   border-radius: 20px;
-  border: none;
   outline: none;
   cursor: pointer;
-}
-
-.mybtn:hover {
-  background-color: rgb(253, 73, 8);
-}
-
-.logbtn {
-  margin-top: 20px;
-}
-
-.mylogoutbtn {
-  padding: 2%;
-  background-color:red;
-  font-size: 15px;
   color: white;
-  border-radius: 10px;
-  border: none;
-  outline: none;
-  cursor: pointer;
+  padding: 2%;
+  width: 30%;
 }
-
-@media (max-width: 768px){
-  .left{
-    display: none;
-  }
-  .right{
-    width: 100%;
-  }
-  .info{
-    background: transparent;
-    background-color: rgba(255, 255, 255, 0.855);
-    padding: 5%;
-    margin: 7%;
-    border-radius: 15px;
-    height: 90%;
-  }
-  .logbtn{
-    height: 10%;
-  }
+.lower-cont button:hover{
+  background-color: rgb(253,73,8);
 }
 @media (max-width: 1024px){
-  .info{
-    padding: 10%;
-    height: 95%;
-  }
-  .logbtn{
-    height: 5%;
-  }
-}
-@media (max-width: 1024px) and (max-height: 1180px){
-  .left{
+.left-blank{
   display: none;
 }
-.right{
+.right-cont{
   width: 100%;
-}
-.info{
   background: transparent;
-  background-color: rgba(255, 255, 255, 0.855);
-  padding: 5%;
-  margin: 12% 7%;
-  border-radius: 15px;
-  height: 95%;
 }
-.logbtn{
-  height: 5%;
+.lower-cont{
+  padding: 4%;
+  width: 80%;
+  height: 60%;
+  margin-top: 15%;
+  margin-left: 10%;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.855);
+}
+.top-cont {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px; 
+}
+ .top-cont button {
+  width: auto;
 }
 }
