--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -59,7 +59,7 @@ font-weight: 700;
   cursor: pointer;
   color: white;
   padding: 2%;
-  width: auto;
+  width: 25%;
 }
 .lower-cont button:hover{
   background-color: rgb(253,73,8);
@@ -81,6 +81,9 @@ font-weight: 700;
   margin-left: 10%;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.855);
+}
+.lower-cont button{
+  width: 45%;
 }
 .top-cont {
   display: flex;
